// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render 0 expenses properly 1`] = `
<div>
  <h2>
    Viewing 0 expenses
  </h2>
</div>
`;

exports[`Should render 1 expense properly 1`] = `
<div>
  <h2>
    Viewing 1 expense totalling $0.09
  </h2>
</div>
`;

exports[`Should render multiple expenses properly 1`] = `
<div>
  <h2>
    Viewing 4 expenses totalling $1.69
  </h2>
</div>
`;
